@@ -3,7 +3,10 @@ Hexen II: Hammer of Thyrion
 Development Progress	:
 ---------------------------
 
-2012-06-04 (SVN):
+2012-06-05 (SVN):
+    * sys_amiga.c: Added -sndahi to the clients' help strings.
+
+2012-06-05 (SVN):
     * sys_amiga.c (Sys_Init): Removed 1ms Sys_Sleep after the timer init
       and inlined a 1us wait, instead. Added missing timer init stuff to
       hexenworld server and utils/cmdlib so that GetSysTime can be used.
